# fariba-ddns

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  docker-compose.yaml  env.example  example.toml
.cargo/: config.toml
docker/: base.Dockerfile
docs/: architecture.md  configuration.md  development.md  providers.md  user-guide.md
src/: config.json  functions.rs  main.rs
src/config/: config.rs
src/metrics/: health.rs  mod.rs  types.rs
src/models/api/: mod.rs
src/models/config/: mod.rs
src/models/config/providers/: mod.rs
src/models/config/providers/arvancloud/: mod.rs
src/models/config/providers/cloudflare/: mod.rs
src/models/config/resolvers/: mod.rs
src/models/config/resolvers/ident_me/: mod.rs
src/providers/: mod.rs  rate_limiter.rs  traits.rs
src/providers/arvancloud/: mod.rs  models.rs
src/providers/cloudflare/: constants.rs  errors.rs  functions.rs  impls.rs  mod.rs  models.rs  types.rs
src/settings/: constants.rs  errors.rs  impls.rs  methods.rs  mod.rs  models.rs  structs.rs  types.rs
src/utility/: cache.rs  mod.rs
src/utility/ip_detector/: constants.rs  errors.rs  functions.rs  impls.rs  mod.rs  traits.rs  types.rs
src/utility/rate_limiter/: impls.rs  traits.rs  types.rs
