[package]
name = "fariba-ddns"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15.7"
once_cell = "1.19.0"
public-ip = "0.2.2"
serde_derive = "1.0.209"
strfmt = "0.2.4"
tracing = "0.1.40"
log = "0.4.22"

[dependencies.config]
version = "0.14.0"
features = [
    "toml",
]

[dependencies.reqwest]
version = "0.12.7"
features = [
    "json",
    "rustls-tls",
]

[dependencies.serde]
version = "1.0.209"
features = [
    "derive",
]

[dependencies.tokio]
version = "1.39.3"
features = [
    "rt-multi-thread",
    "macros",
]

[dependencies.tracing-subscriber]
version = "0.3.18"
features = [
    "env-filter",
]
