[package]
name = "fariba-ddns"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15.7"
dirs = "5.0.1"
once_cell = "1.20.2"
public-ip = "0.2.2"
strfmt = "0.2.4"
tracing = "0.1.40"
log = "0.4.22"
futures = "0.3.30"

[dependencies.config]
version = "0.14.1"
features = [
    "toml",
]

[dependencies.reqwest]
version = "0.12.9"
features = [
    "json",
    "rustls-tls",
]

[dependencies.serde]
version = "1.0.215"
features = [
    "derive",
]

[dependencies.tokio]
version = "1.41.1"
features = [
    "rt-multi-thread",
    "macros",
]

[dependencies.tracing-subscriber]
version = "0.3.18"
features = [
    "env-filter",
]
